# filtered_news_bot

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/core/: utils.py
src/core/db/: config.py  db_helper.py
src/core/db/models/: __init__.py  base.py  news_source_models.py  subscription_models.py  user_models.py
src/core/db/sql_types/: __init__.py
src/core/message_broker/: config.py  consumer.py  producer.py
src/models/: __init__.py
src/repositories/: news_sources_respository.py  users_repository.py
src/services/: subscriptions_service.py
src/services/news_sources/: __init__.py  news_source_handlers.py  schemas.py
src/services/users/: __init__.py  schemas.py
src/telegram_bot/: bot.py  config.py
src/telegram_bot/middlewares/: service.py  user_registration.py
src/telegram_channel_reader/: channel_reader.py  config.py  html_channel_reader.py  schemas.py
src/utils/telegram/: __init__.py  schemas.py
