[tool.poetry]
name = "filtered-news-bot"
version = "0.1.0"
description = ""
authors = ["Milana <94888u@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic-settings = "^2.2.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
aiogram = "^3.5.0"
pattern = "^3.6.0"
aiosqlite = "^0.20.0"
telethon = "^1.35.0"
asyncpg = "^0.29.0"
pika = "^1.3.2"
aiohttp = "^3.9.5"
beautifulsoup4 = "^4.12.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
